[package]
name = "o2o"
version = "0.1.0"
edition = "2021"
authors = ["Artem Romanenia <artem.romanenia@gmail.com>"]
categories = ["rust-patterns"]
description = "Object to Object mapper for Rust"
keywords = ["from", "into", "map", "copy", "struct", "mapper", "automapper", "copier", "dto"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Artem-Romanenia/o2o"

[dependencies]
o2o-impl = { version = "0.1.0", path = "o2o-impl" }
o2o-macros = { version = "0.1.0", path = "o2o-macros" }
proc-macro2 = "1.0.51"
syn = "1.0.109"
quote = "1.0.23"

[workspace]
members = ["o2o-impl", "o2o-macros"]
