[package]
name = "o2o"
version = "0.4.4"
edition = "2021"
authors = ["Artem Romanenia <artem.romanenia@gmail.com>"]
categories = ["rust-patterns"]
description = "Object to Object mapper for Rust. Derive 'From' and 'Into' traits."
keywords = ["from", "into", "copy", "mapper", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Artem-Romanenia/o2o"

[dependencies]
o2o-impl = { version = "0.4.4", path = "o2o-impl" }
o2o-macros = { version = "0.4.4", path = "o2o-macros" }

[workspace]
members = ["o2o-impl", "o2o-macros", "o2o-tests"]
