[package]
name = "o2o"
version = "0.5.4"
edition = "2021"
authors = ["Artem Romanenia <artem.romanenia@gmail.com>"]
categories = ["rust-patterns", "no-std", "development-tools"]
description = "Object to Object mapper for Rust. Derive '(Try)From' and '(Try)Into' traits."
keywords = ["from", "into", "copy", "mapper", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Artem-Romanenia/o2o"

[dependencies]
o2o-impl = { version = "0.5.4", path = "o2o-impl", default-features = false, optional = true }
o2o-macros = { version = "0.5.4", path = "o2o-macros", default-features = false, optional = true }

[features]
default = ["syn1"]
syn1 = ["o2o-impl/syn", "o2o-macros/syn1"]
syn2 = ["o2o-impl/syn2", "o2o-macros/syn2"]

[workspace]
members = ["o2o-impl", "o2o-macros", "o2o-tests"]
