[package]
name = "o2o-impl"
version = "0.3.0"
edition = "2021"
authors = ["Artem Romanenia <artem.romanenia@gmail.com>"]
description = "Implementation of 'o2o' crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Artem-Romanenia/o2o"

[dependencies]
proc-macro2 = "1.0.0"
syn = "1.0.3"
quote = "1.0.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "o2o_benchmarks"
harness = false
