[package]
name = "o2o-impl"
version = "0.5.1-beta1"
edition = "2021"
authors = ["Artem Romanenia <artem.romanenia@gmail.com>"]
description = "Implementation of 'o2o' crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Artem-Romanenia/o2o"

[dependencies]
proc-macro2 = "1.0.0"
syn = { package = "syn", version = "1.0.3", optional = true }
syn2 = { package = "syn", version = "2.0.0", optional = true }
quote = "1.0.0"

[dev-dependencies]
criterion = "0.4"
test-case = "3"

[[bench]]
name = "o2o_benchmarks"
harness = false
