[package]
name = "o2o-macros"
version = "0.1.1"
edition = "2021"
authors = ["Artem Romanenia <artem.romanenia@gmail.com>"]
description = "Macro definitions of 'o2o' crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Artem-Romanenia/o2o"

[lib]
proc-macro = true

[dependencies]
o2o-impl = { version = "0.1.1", path = "../o2o-impl" }
proc-macro2 = "1.0.51"
syn = "1.0.109"
quote = "1.0.23"
