[package]
name = "o2o-macros"
version = "0.5.2"
edition = "2021"
authors = ["Artem Romanenia <artem.romanenia@gmail.com>"]
description = "Macro definitions of 'o2o' crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Artem-Romanenia/o2o"

[lib]
proc-macro = true

[dependencies]
o2o-impl = { version = "0.5.2", path = "../o2o-impl" }
syn = { package = "syn", version = "1.0.3", optional = true }
syn2 = { package = "syn", version = "2.0.0", optional = true }

[features]
default = ["syn1"]
syn1 = ["dep:syn", "o2o-impl/syn"]
syn2 = ["dep:syn2", "o2o-impl/syn2"]
