[package]
name = "o2o-tests"
version = "0.4.9-alpha.2"
edition = "2021"
authors = ["Artem Romanenia <artem.romanenia@gmail.com>"]
description = "Tests for 'o2o' crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Artem-Romanenia/o2o"

[dependencies]
o2o = { version = "0.4.9-alpha.2", path = "../" }
anyhow = "1.0.86"

[dev-dependencies]
test-case = "3"
