[package]
name = "o2o-tests"
version = "0.5.1"
edition = "2021"
authors = ["Artem Romanenia <artem.romanenia@gmail.com>"]
description = "Tests for 'o2o' crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Artem-Romanenia/o2o"

[dependencies]
o2o = { version = "0.5.1", default-features = false, path = "../" }
anyhow = "1.0.86"

[dev-dependencies]
test-case = "3"

[features]
default = ["syn1"]
syn1 = ["o2o/syn1"]
syn2 = ["o2o/syn2"]